# WoodAI

./: CMakeLists.txt  Dockerfile  README.md  draw_boxes.cpp  inference.py  main.cpp  requirements.txt  yolo_inference.py
